adding m3 backend tests